--- a/src/app/common/components/ArtGallery/components/OneAndTwoAndThreeAndFour/OneAndTwoAndThreeAndFourSlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/OneAndTwoAndThreeAndFour/OneAndTwoAndThreeAndFourSlide.styles.scss
@@ -11,6 +11,14 @@
             "img1 img3"
             "img2 img4";
 
+  @media screen and (max-width: 1024px) {
+    grid-template-columns: repeat(2, minmax(auto, pxToRem(s.$art-gallery-img-size) - 1rem));
+  }
+
+  @media screen and (max-width: 768px) {
+    grid-template-columns: repeat(2, pxToRem(s.$art-gallery-img-size-mobile + 52px));
+  }
+
   @media screen and (max-width: 680px) {
     grid-template-columns: repeat(2, pxToRem(s.$art-gallery-img-size-mobile));
     width: pxToRem(s.$art-gallery-img-size-mobile * 2 + s.$art-gallery-gap-mobile);
