--- a/src/features/StreetcodePage/SourcesBlock/Sources.styles.scss
+++ b/src/features/StreetcodePage/SourcesBlock/Sources.styles.scss
@@ -4,13 +4,12 @@
 @use "@sass/mixins/_wrapper.mixins.scss" as wr;
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
 @use "@assets/sass/_utils.functions.scss" as f;
-
+@use "@features/SlickSlider/SlickSlider.styles.scss" as ss;
 .sourcesWrapper {
     @include wr.main-page-block-wrapper();
-
+    margin-top: 110px;
     .sourcesContainer {
         @include mut.sizedImportant(100%, 100%);
-
         @media screen and (max-width: 768px) {
             justify-content: stretch !important;
         }
@@ -18,56 +17,242 @@
             @include mut.flex-centered();
             .slick-slide {
                 .slider-item-container {
-                    .left, .right {
+                    .left,
+                    .right {
                         display: none;
                     }
                 }
             }
         }
-
-        > .blockHeadingWrapper {
+        >.blockHeadingWrapper {
             margin-top: pxToRem(0px);
         }
     }
-
-    .sourcesSliderContainer {
-        @include mut.sizedImportant(1230px, 100%);
+    .sourcesSliderContainerBig {
+        position: relative;
+        @include mut.sized($width: 1065px);
+        margin: 0 auto;
+        .slick-arrow {
+            position: absolute;
+            transform: translateY(-1.8rem);
+        }
+    }
+    .sourcesSliderContainerSmall {
+        @include mut.sizedImportant(1100px, 100%);
         .slick-arrow {
             display: none;
             visibility: hidden;
         }
     }
-
     .sliderClass {
         .slick-list {
             @include mut.rem-padded($bottom: 23px);
+            margin-left: -80px;
+            margin-right: -60px;
         }
-
         .slick-track {
             @include mut.flex-centered($gap: 30px);
             width: unset !important;
             border: none;
-            border: 1px solid transparent;          
+            border: 1px solid transparent;
             .slick-slide {
                 @include vnd.vendored(transition, 'all .5s ease');
-                .left, .right{
+                .left,
+                .right {
                     width: 0;
                 }
-    
                 &:hover {
                     scale: 101%;
                     filter: contrast(135%);
                     cursor: pointer;
                     &:focus,
                     &:focus-visible {
-                    outline: none;
+                        outline: none;
                     }
                 }
             }
-            .slick-cloned{
+            .slick-cloned {
                 display: none;
             }
         }
+    }
+}
+
+@media screen and (max-width: 1300px) {
+    .sourcesWrapper .sourcesSliderContainerBig {
+        position: relative;
+        @include mut.sized($width: 880px);
+        margin: 0 auto;
+        .slick-arrow {
+            position: absolute;
+            transform: translateY(-1.8rem);
+            margin-left: 8px;
+            margin-right: 23px;
+        }
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .sourcesWrapper .sourcesSliderContainerBig {
+        position: relative;
+        @include mut.sized($width: 750px);
+        margin: 0 auto;
+        .slick-arrow {
+            position: absolute;
+            transform: translateY(-1.8rem);
+            margin-left: 8px;
+            margin-right: 23px;
+        }
+    }
+}
+
+@media screen and (max-width: 1070px) {
+    .sourcesWrapper .sourcesSliderContainerBig {
+        position: relative;
+        @include mut.sized($width: 655px);
+        margin: 0 auto;
+        .slick-arrow {
+            position: absolute;
+            transform: translateY(-1.8rem);
+            margin-left: 8px;
+            margin-right: 23px;
+        }
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .sourcesWrapper .sourcesSliderContainerBig {
+        position: relative;
+        @include mut.sized($width: 655px);
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 850px) {
+    .sourcesWrapper .sourcesSliderContainerBig {
+        position: relative;
+        @include mut.sized($width: 640px);
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 829px) {
+    .sourcesWrapper .sourcesSliderContainerBig {
+        position: relative;
+        @include mut.sized($width: 530px);
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 715px) {
+    .sourcesWrapper .sourcesSliderContainerBig {
+        position: relative;
+        @include mut.sized($width: 380px);
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 560px) {
+    .sourcesWrapper .sourcesSliderContainerBig {
+        position: relative;
+        @include mut.sized($width: 265px);
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 455px) {
+    .sourcesWrapper .sourcesSliderContainerBig {
+        position: relative;
+        @include mut.sized($width: 115px);
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 1300px) {
+    .sourcesWrapper .sourcesSliderContainerSmall {
+        @include mut.sizedImportant(1100px, 100%);
+        .slick-arrow {
+            display: none;
+            visibility: hidden;
+        }
+        margin-left: 90px;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .sourcesWrapper .sourcesSliderContainerSmall {
+        @include mut.sizedImportant(870px, 100%);
+        .slick-arrow {
+            display: none;
+            visibility: hidden;
+        }
+        margin-left: 10px;
+    }
+}
+
+@media screen and (max-width: 1050px) {
+    .sourcesWrapper .sourcesSliderContainerSmall {
+        @include mut.sizedImportant(750px, 100%);
+        .slick-arrow {
+            display: none;
+            visibility: hidden;
+        }
+        margin-left: 10px;
+    }
+}
+
+@media screen and (max-width: 925px) {
+    .sourcesWrapper .sourcesSliderContainerSmall {
+        @include mut.sizedImportant(640px, 100%);
+        .slick-arrow {
+            display: none;
+            visibility: hidden;
+        }
+        margin-left: 10px;
+    }
+}
+
+@media screen and (max-width: 810px) {
+    .sourcesWrapper .sourcesSliderContainerSmall {
+        @include mut.sizedImportant(510px, 100%);
+        .slick-arrow {
+            display: none;
+            visibility: hidden;
+        }
+        margin-left: 10px;
+    }
+}
+
+@media screen and (max-width: 680px) {
+    .sourcesWrapper .sourcesSliderContainerSmall {
+        @include mut.sizedImportant(380px, 100%);
+        .slick-arrow {
+            display: none;
+            visibility: hidden;
+        }
+        margin-left: 10px;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .sourcesWrapper .sourcesSliderContainerSmall {
+        @include mut.sizedImportant(290px, 100%);
+        .slick-arrow {
+            display: none;
+            visibility: hidden;
+        }
+        margin-left: 10px;
+    }
+}
+
+@media screen and (max-width: 460px) {
+    .sourcesWrapper .sourcesSliderContainerSmall {
+        @include mut.sizedImportant(120px, 100%);
+        .slick-arrow {
+            display: none;
+            visibility: hidden;
+        }
+        margin-left: 10px;
     }
 }
 
@@ -78,8 +263,7 @@
     .sourcesWrapper .sliderClass .slick-track {
         gap: f.pxToRem(10px);
     }
-    .sourcesWrapper .slick-dots{
+    .sourcesWrapper .slick-dots {
         left: f.pxToRem(1px);
     }
 }
-
