arrows now appear

--- a/src/features/MainPage/MainPage.styles.scss
+++ b/src/features/MainPage/MainPage.styles.scss
@@ -7,6 +7,48 @@
 
 $bgImg: '@assets/images/main-page/background.webp';
 
+.slick-slider {
+    .slick-arrow {
+        top: 43%;
+        @include mut.sized(68px, 101px);
+    }
+
+    .slick-prev,
+    .slick-next {
+        filter: none !important;
+    }
+
+    .slick-prev {
+        left: 20px !important;
+
+        &::before {
+            content: url("@assets/images/utils/LeftSmallSliderArrow.svg");
+            opacity: 0.9;
+            filter: none;
+        }
+
+        &:hover::before {
+            opacity: 1.0;
+            filter: none;
+        }
+    }
+
+    .slick-next {
+        right: 20px !important;
+
+        &::before {
+            content: url("@assets/images/utils/RightSmallSliderArrow.svg");
+            opacity: 0.9;
+            filter: none;
+        }
+
+        &:hover::before {
+            opacity: 1.0;
+            filter: none;
+        }
+    }
+}
+
 .mainPageContainer {
     background: url($bgImg) no-repeat top / 100%;
 
