--- a/src/features/StreetcodePage/SourcesBlock/Sources.styles.scss
+++ b/src/features/StreetcodePage/SourcesBlock/Sources.styles.scss
@@ -4,6 +4,7 @@
 @use "@sass/mixins/_wrapper.mixins.scss" as wr;
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
 @use "@assets/sass/_utils.functions.scss" as f;
+@use "@features/SlickSlider/SlickSlider.styles.scss" as ss;
 .sourcesWrapper {
     @include wr.main-page-block-wrapper();
     margin-top: 110px;
@@ -77,11 +78,11 @@
     }
 }
 
-@media screen and (max-width: 1300px) {
-    .sourcesWrapper .sourcesSliderContainerBig {
-        position: relative;
+.sourcesWrapper .sourcesSliderContainerBig {
+    position: relative;
+    margin: 0 auto;
+    @media screen and (max-width: 1300px) {
         @include mut.sized($width: 880px);
-        margin: 0 auto;
         .slick-arrow {
             position: absolute;
             transform: translateY(-1.8rem);
@@ -89,13 +90,8 @@
             margin-right: 23px;
         }
     }
-}
-
-@media screen and (max-width: 1200px) {
-    .sourcesWrapper .sourcesSliderContainerBig {
-        position: relative;
+    @media screen and (max-width: 1200px) {
         @include mut.sized($width: 750px);
-        margin: 0 auto;
         .slick-arrow {
             position: absolute;
             transform: translateY(-1.8rem);
@@ -103,13 +99,8 @@
             margin-right: 23px;
         }
     }
-}
-
-@media screen and (max-width: 1070px) {
-    .sourcesWrapper .sourcesSliderContainerBig {
-        position: relative;
+    @media screen and (max-width: 1070px) {
         @include mut.sized($width: 655px);
-        margin: 0 auto;
         .slick-arrow {
             position: absolute;
             transform: translateY(-1.8rem);
@@ -117,53 +108,26 @@
             margin-right: 23px;
         }
     }
-}
-
-@media screen and (max-width: 1024px) {
-    .sourcesWrapper .sourcesSliderContainerBig {
-        position: relative;
+    @media screen and (max-width: 1024px) {
+        @include mut.sized($width: 755px);
+    }
+    @media screen and (max-width: 940px) {
         @include mut.sized($width: 655px);
-        margin: 0 auto;
     }
-}
-
-@media screen and (max-width: 850px) {
-    .sourcesWrapper .sourcesSliderContainerBig {
-        position: relative;
-        @include mut.sized($width: 640px);
-        margin: 0 auto;
-    }
-}
-
-@media screen and (max-width: 829px) {
-    .sourcesWrapper .sourcesSliderContainerBig {
-        position: relative;
+    @media screen and (max-width: 829px) {
         @include mut.sized($width: 530px);
-        margin: 0 auto;
     }
-}
-
-@media screen and (max-width: 715px) {
-    .sourcesWrapper .sourcesSliderContainerBig {
-        position: relative;
+    @media screen and (max-width: 715px) {
+        @include mut.sized($width: 450px);
+    }
+    @media screen and (max-width: 630px) {
         @include mut.sized($width: 380px);
-        margin: 0 auto;
     }
-}
-
-@media screen and (max-width: 560px) {
-    .sourcesWrapper .sourcesSliderContainerBig {
-        position: relative;
+    @media screen and (max-width: 560px) {
         @include mut.sized($width: 265px);
-        margin: 0 auto;
     }
-}
-
-@media screen and (max-width: 455px) {
-    .sourcesWrapper .sourcesSliderContainerBig {
-        position: relative;
-        @include mut.sized($width: 115px);
-        margin: 0 auto;
+    @media screen and (max-width: 455px) {
+        @include mut.sized($width: 205px);
     }
 }
 
@@ -174,84 +138,53 @@
             display: none;
             visibility: hidden;
         }
-        margin-left: 90px;
+        margin-left: 150px;
     }
 }
 
-@media screen and (max-width: 1200px) {
-    .sourcesWrapper .sourcesSliderContainerSmall {
-        @include mut.sizedImportant(870px, 100%);
-        .slick-arrow {
-            display: none;
-            visibility: hidden;
-        }
-        margin-left: 10px;
+.sourcesWrapper .sourcesSliderContainerSmall {
+    .slick-arrow {
+        display: none;
+        visibility: hidden;
     }
-}
-
-@media screen and (max-width: 1050px) {
-    .sourcesWrapper .sourcesSliderContainerSmall {
-        @include mut.sizedImportant(750px, 100%);
-        .slick-arrow {
-            display: none;
-            visibility: hidden;
-        }
-        margin-left: 10px;
+    margin-left: 10px;
+    @media screen and (max-width: 1270px) {
+        @include mut.sizedImportant(1100px, 100%);
+        margin-left: 105px;
     }
-}
-
-@media screen and (max-width: 925px) {
-    .sourcesWrapper .sourcesSliderContainerSmall {
-        @include mut.sizedImportant(640px, 100%);
-        .slick-arrow {
-            display: none;
-            visibility: hidden;
-        }
-        margin-left: 10px;
+    @media screen and (max-width: 1175px) {
+        @include mut.sizedImportant(1050px, 100%);
+        margin-left: 105px;
     }
-}
-
-@media screen and (max-width: 810px) {
-    .sourcesWrapper .sourcesSliderContainerSmall {
+    @media screen and (max-width: 1120px) {
+        @include mut.sizedImportant(950px, 100%);
+    }
+    @media screen and (max-width: 1050px) {
+        @include mut.sizedImportant(850px, 100%);
+    }
+    @media screen and (max-width: 925px) {
+        @include mut.sizedImportant(740px, 100%);
+    }
+    @media screen and (max-width: 810px) {
+        @include mut.sizedImportant(650px, 100%);
+    }
+    @media screen and (max-width: 735px) {
+        @include mut.sizedImportant(600px, 100%);
+    }
+    @media screen and (max-width: 680px) {
+        @include mut.sizedImportant(550px, 100%);
+    }
+    @media screen and (max-width: 620px) {
         @include mut.sizedImportant(510px, 100%);
-        .slick-arrow {
-            display: none;
-            visibility: hidden;
-        }
-        margin-left: 10px;
     }
-}
-
-@media screen and (max-width: 680px) {
-    .sourcesWrapper .sourcesSliderContainerSmall {
-        @include mut.sizedImportant(380px, 100%);
-        .slick-arrow {
-            display: none;
-            visibility: hidden;
-        }
-        margin-left: 10px;
+    @media screen and (max-width: 580px) {
+        @include mut.sizedImportant(480px, 100%);
     }
-}
-
-@media screen and (max-width: 550px) {
-    .sourcesWrapper .sourcesSliderContainerSmall {
+    @media screen and (max-width: 550px) {
+        @include mut.sizedImportant(390px, 100%);
+    }
+    @media screen and (max-width: 460px) {
         @include mut.sizedImportant(290px, 100%);
-        .slick-arrow {
-            display: none;
-            visibility: hidden;
-        }
-        margin-left: 10px;
-    }
-}
-
-@media screen and (max-width: 460px) {
-    .sourcesWrapper .sourcesSliderContainerSmall {
-        @include mut.sizedImportant(120px, 100%);
-        .slick-arrow {
-            display: none;
-            visibility: hidden;
-        }
-        margin-left: 10px;
     }
 }
 
