--- a/src/app/common/components/modals/Sources/SourcesModal.styles.scss
+++ b/src/app/common/components/modals/Sources/SourcesModal.styles.scss
@@ -84,7 +84,7 @@ $CancelBtn: "/src/assets/images/utils/Cancel_btn.svg";
 
     a {
       text-decoration: underline;
-      color: c.$pure-black-color;
+      color: c.$dark-red-color;
     }
 
     .sectionLinksContainer {
