--- a/src/features/AdditionalPages/PrivatePolicyPage/PrivatePolicy.styles.scss
+++ b/src/features/AdditionalPages/PrivatePolicyPage/PrivatePolicy.styles.scss
@@ -18,7 +18,8 @@
     }
     
     .link{
-        color: #891F16;
+        color: c.$dark-red-color;
+        text-decoration: underline;
     }
 
     section{
