--- a/src/features/AdditionalPages/SupportUsPage/components/DonationBlock.styles.scss
+++ b/src/features/AdditionalPages/SupportUsPage/components/DonationBlock.styles.scss
@@ -117,6 +117,11 @@
         display: inline-block;
         overflow: visible;
 
+        .privacyPolicy{
+          color: c.$dark-red-color;
+          text-decoration: underline;
+        }
+
         &:last-child {
           @include mut.rem-padded($left: 16px);
           @include mut.rem-margined($top: 6px);
@@ -270,6 +275,12 @@
         overflow: visible;
 
         span {
+
+          .privacyPolicy{
+            color: c.$dark-red-color;
+            text-decoration: underline;
+          }
+
           &:last-child {
             @include mut.with-font(ft.$roboto-font, $font-size: 12px, $font-weight: 500);
             @include mut.rem-padded($left: 8px);
