--- a/src/app/common/components/ArtGallery/components/OneToFourAndFiveToSixSlide/OneToFourAndFiveToSixSlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/OneToFourAndFiveToSixSlide/OneToFourAndFiveToSixSlide.styles.scss
@@ -5,8 +5,8 @@
   @include mut.art-slide-grid($cols: 2, $rows: 2);
   @include mut.images-grid-area($to: 2);
 
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: repeat(3,1fr);
   grid-template-areas:
-            "img1 img2"
-            "img1 img2";
+      "img1 img1 img2"
+      "img1 img1 img2";
 }
