--- a/src/assets/sass/variables/_variables.sizes.scss
+++ b/src/assets/sass/variables/_variables.sizes.scss
@@ -7,5 +7,7 @@ $smallPhone: 400px;
 $art-gallery-img-size: 380px;
 $art-gallery-img-size-mobile: 200px;
 
+$art-gallery-big-img-size: 806px;
+
 $art-gallery-gap: 30px;
 $art-gallery-gap-mobile: 10px;
