--- a/src/app/common/components/ArtGallery/ArtGalleryBlock.styles.scss
+++ b/src/app/common/components/ArtGallery/ArtGalleryBlock.styles.scss
@@ -47,6 +47,42 @@
     gap: 2rem;
 }
 
+@media screen and (min-width:1600px) {
+    .artGalleryContainer {
+        .container-for-arts-block {
+            margin-left: 350px;
+            margin-top: -110px;
+        }
+    }
+}
+
+@media screen and (min-width:1700px) {
+    .artGalleryContainer {
+        .container-for-arts-block {
+            margin-left: 400px;
+            margin-top: -110px;
+        }
+    }
+}
+
+@media screen and (min-width:2000px) {
+    .artGalleryContainer {
+        .container-for-arts-block {
+            margin-left: 450px;
+            margin-top: -110px;
+        }
+    }
+}
+
+@media screen and (min-width:2200px) {
+    .artGalleryContainer {
+        .container-for-arts-block {
+            margin-left: 500px;
+            margin-top: -110px;
+        }
+    }
+}
+
 @media screen and (max-width:1450px) {
     .artGalleryWrapper {
         .artGalleryContainer {
