good practice fix

--- a/src/app/common/components/ArtGallery/ArtGalleryBlock.styles.scss
+++ b/src/app/common/components/ArtGallery/ArtGalleryBlock.styles.scss
@@ -10,6 +10,7 @@
 }
 
 .artGalleryContainer {
+    margin-top: 0px !important;
     .slick-next:before {
         @include ss.slick-arrow-pseudo(Right, -23px)
     }
