--- a/src/app/common/components/ArtGallery/components/OneToTwoSlide/OneToTwoSlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/OneToTwoSlide/OneToTwoSlide.styles.scss
@@ -1,17 +1,24 @@
 @use "@sass/mixins/_utils.mixins.scss" as mut;
 @use "@sass/_utils.functions.scss" as *;
 @use '@sass/variables/variables.sizes' as s;
-
-.oneToTwoSlide{
+.oneToTwoSlide {
     @include mut.flex-center();
-
-    .baseArtSlideImageWrapper{
+    .baseArtSlideImageWrapper {
         width: pxToRem(s.$art-gallery-img-size);
-        @media screen and (max-width: 768px){
+        @media screen and (max-width: 768px) {
             width: pxToRem(s.$art-gallery-img-size-mobile * 1.2);
         }
     }
-    @media screen and (max-width: 680px){
+    @media screen and (max-width: 680px) {
+        width: pxToRem(s.$art-gallery-img-size-mobile* 1.2);
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    @media screen and (max-width: 460px) {
         width: pxToRem(s.$art-gallery-img-size-mobile);
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
