add dots and crucial dates for <1024 viewport

--- a/src/features/StreetcodePage/TimelineBlock/TimelineBlock.styles.scss
+++ b/src/features/StreetcodePage/TimelineBlock/TimelineBlock.styles.scss
@@ -27,6 +27,9 @@ $timelineSquareImg: "@assets/images/timeline/Square.webp";
 
     .slick-slider {
       @include mut.parent-sized();
+      .slick-dots{
+        bottom: f.pxToRem(-100px) !important;
+      }
     }
 
     .slick-list {
