--- a/src/app/common/components/ArtGallery/components/OneToTwoAndThreeToFourAndFiveToSixSlide/OneToTwoAndThreeToFourAndFiveToSixSlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/OneToTwoAndThreeToFourAndFiveToSixSlide/OneToTwoAndThreeToFourAndFiveToSixSlide.styles.scss
@@ -2,18 +2,12 @@
 @use "@sass/_utils.functions.scss" as *;
 @use '@sass/variables/variables.sizes' as s;
 
-.OneToTwoAndThreeToFourAndFiveToSixSlide{
-    @include mut.flex-center();
+.OneToTwoAndThreeToFourAndFiveToSixSlide {
+    @include mut.art-slide-grid($cols: 3, $rows: 2);
+    @include mut.images-grid-area($to: 3);
 
-    .baseArtSlideImageWrapper, .droppable{
-        width: pxToRem(s.$art-gallery-img-size);
-        @media screen and (max-width: 768px){
-            width: pxToRem(s.$art-gallery-img-size-mobile * 1.2);
-        }
-    }
-
-
-    @media screen and (max-width: 680px){
-        width: pxToRem(s.$art-gallery-img-size-mobile * 3 + s.$art-gallery-gap-mobile * 2);
-    }
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas:
+        "img1 img2 img3"
+        "img1 img2 img3";
 }
