--- a/src/features/AdminPage/NewStreetcode/StreetcodeArtsBlock/components/DownloadStyles.styles.scss
+++ b/src/features/AdminPage/NewStreetcode/StreetcodeArtsBlock/components/DownloadStyles.styles.scss
@@ -1,33 +1,41 @@
 @use "@sass/variables/_variables.colors.scss" as c;
 @use "@sass/_utils.functions.scss" as *;
-
-.delete-border{
+.delete-border {
     border: 0.25rem solid c.$accented-red-color;
     border-radius: 11px;
 }
 
-.disabled{
+.disabled {
     opacity: 0.5;
 }
 
-.delete-arts-button{
+.delete-arts-button {
     width: 30%;
 }
 
-.art-gallery-download{
+.art-gallery-download {
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
     margin-bottom: pxToRem(10px);
 }
 
-.streetcode-art-preview{
+.streetcode-art-preview {
     width: 100%;
     height: 100%;
-
-    & > *{
+    &>* {
         width: 100%;
         height: 100%;
     }
 }
 
+.streetcode-art-preview-green {
+    border: 5px solid green;
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    &>* {
+        width: 100%;
+        height: 100%;
+    }
+}
