feat: ListenTextModal moved to App

--- a/src/app/common/components/modals/ListenText/ListenText.styles.scss
+++ b/src/app/common/components/modals/ListenText/ListenText.styles.scss
@@ -17,6 +17,8 @@
 
     z-index: l.$stickyEl;
     box-shadow: 0 2px 15px rgba(163, 163, 163, 0.25);
+
+    align-self: center;
 }
 
 .fadeInAnimation {
