feat: random blink in the end of Audio modal closing fixed

--- a/src/app/common/components/modals/ListenText/ListenText.styles.scss
+++ b/src/app/common/components/modals/ListenText/ListenText.styles.scss
@@ -25,7 +25,7 @@
     animation: fadeIn .5s;
 }
 .fadeOutAnimation {
-    animation: fadeOut .5s;
+    animation: fadeOut .5s forwards;
 }
 
 @include mut.fadeKeyframes("fadeIn", "fadeIn") {
