--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
@@ -5,6 +5,11 @@
 @use "@assets/sass/mixins/_vendor.mixins.scss" as vnd;
 @use "@app/common/components/CardText/CardText.styles" as textCard;
 
+.slides-2 .slick-track,
+.slides-3 .slick-track {
+  gap: 0 !important;
+}
+
 .interestingFactSlide {
   @include mut.sized(387px);
   @include mut.full-rounded(33px);
