--- a/src/features/AboutUsPage/TeamMembers/TeamMembers.component.scss
+++ b/src/features/AboutUsPage/TeamMembers/TeamMembers.component.scss
@@ -44,7 +44,7 @@
     transition: .5s;
     filter: c.$active-arrow-filter-color;
     &:hover {
-      filter: c.$selected-arrow-filter-color;
+        filter: c.$selected-arrow-filter-color;
     }
 }
 
@@ -66,6 +66,19 @@
             width: fit-content;
             height: auto;
         }
+
+        .swiper-pagination {
+            bottom: 0;
+            .swiper-pagination-bullet {
+                @include mut.sized(8px, 8px);
+                background: c.$slider-base-dot-color;
+                border-radius: 0%;
+                transition: .5s;
+            }
+
+            .swiper-pagination-bullet-active {
+                background: c.$dark-red-color;
+            }
+        }
     }
 }
-
