--- a/src/features/AdminPage/PartnersPage/PartnerModal/PartnerModal.styles.scss
+++ b/src/features/AdminPage/PartnersPage/PartnerModal/PartnerModal.styles.scss
@@ -25,19 +25,26 @@
 
 .partner-modal-container {
     .line-form-item div {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-wrap: nowrap;
-      gap: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: nowrap;
+        gap: 0;
     }
 }
-.partner-source-list .partner-source-list-item {
-    display: flex;
-    align-items: center;
-    flex-wrap: nowrap;
-    margin-bottom: 5px;
-    gap: 8px;
+
+.partner-source-list{
+    .partner-source-list-item {
+        display: flex;
+        align-items: center;
+        flex-wrap: nowrap;
+        margin-bottom: 5px;
+        gap: 8px;
+
+        .partner-source-text {
+            @include mut.truncated($line-num: 2);
+        }
+    }
 }
 
 .save{
