chore: Add word-break property to AdditionalTextBlock styles

--- a/src/features/StreetcodePage/TextBlock/AdditionalTextBlock/AdditionalTextBlock.styles.scss
+++ b/src/features/StreetcodePage/TextBlock/AdditionalTextBlock/AdditionalTextBlock.styles.scss
@@ -11,6 +11,7 @@
     font-size: f.pxToRem(20px);
     line-height: f.pxToRem(26px);
     font-style: italic;
+    word-break: break-all;
 
     p {
         font-family: 'Closer Text' !important;
