feat: tap highlight color changed to transparent in TeamMembers component

--- a/src/features/AboutUsPage/TeamMembers/TeamMembers.component.scss
+++ b/src/features/AboutUsPage/TeamMembers/TeamMembers.component.scss
@@ -53,6 +53,7 @@
     align-items: center;
     justify-content: center;
     margin: 0 auto;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .squareParent{
