--- a/src/features/AdminPage/PageBar/PageBar.styles.scss
+++ b/src/features/AdminPage/PageBar/PageBar.styles.scss
@@ -26,7 +26,11 @@
         &:focus {
             outline: none;
             box-shadow: none;
-          }
+        }
         @include vnd.vendored(transition, 'scale .3s ease');
+
+        &.active {
+            color: c.$text-red-color;
+        }
     }
 }
