--- a/src/features/AdminPage/PageBar/PageBar.styles.scss
+++ b/src/features/AdminPage/PageBar/PageBar.styles.scss
@@ -31,6 +31,8 @@
 
         &.active {
             color: c.$text-red-color;
+            text-decoration: underline;
+            text-underline-offset: f.pxToRem(5px);
         }
     }
 }
