--- a/src/features/AdditionalPages/NewsPage/News.styles.scss
+++ b/src/features/AdditionalPages/NewsPage/News.styles.scss
@@ -165,11 +165,6 @@
             }
         }
 
-        .newsTextArea {
-            white-space: pre-line;
-            @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 300, $font-size: 20px);
-        }
-
         .newsMainTextArea {
             p {
                 @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 20px);
@@ -210,19 +205,25 @@
             }
         }
 
-        .newsTextArea {
-            white-space: pre-line;
-            @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 300, $font-size: 16px);
+        .newsWithImageWrapper {
+            flex-wrap: wrap;
+
+            .newsTextArea {
+                white-space: pre-line;
+                @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 300, $font-size: 18px);
+                
+                p {
+                    strong {
+                        @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 16px);
+                    }
+                }
+            }
         }
 
         .newsMainTextArea {
             p {
-                @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 14px);
+                @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 16px);
             }
-        }
-
-        .newsWithImageWrapper {
-            flex-wrap: wrap;
         }
 
         .newsImage {
@@ -262,7 +263,7 @@
         .wrapper {
             .NewsHeader {
                 h1 {
-                    @include mut.with-font($font-size: 20px, $font-family: ft.$closer-text-font, $font-weight: 500);
+                    @include mut.with-font($font-size: 24px, $font-family: ft.$closer-text-font, $font-weight: 500);
                 }
             }
 
